# Starweb

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Makefile  PROTOCOL.md  README.md
.github/workflows/: main.yml
dns/: README.md  requirements.txt  run.py
dns/stardns/: __init__.py  __main__.py  auth.py  ca.py  config.py  db.py  errors.py  panel.py  resolver.py  ui.py  wire.py  zones.py
dns/stardns/tests/: conftest.py  fakemongo.py  test_accounts.py  test_ca.py  test_panel.py  test_resolver.py  test_wire.py  test_zones.py
python/: README.md  pyproject.toml
python/examples/: api.py
python/starweb/: __init__.py  cli.py  client.py  content_types.py  errors.py  message.py  server.py  static.py  tls.py  url.py
python/tests/: conftest.py  test_interop.py  test_isolation.py  test_logging.py  test_message.py  test_range.py  test_scheme.py  test_server.py  test_url.py
src/browser/: browser.cpp  fetcher.cpp  fetcher.hpp  globals.cpp  globals.hpp  media_player.hpp  media_player_ffmpeg.cpp  media_player_mac.mm  media_source.cpp  media_source.hpp  parser.cpp  parser.hpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp  script_fetch.cpp  script_fetch.hpp  theme.hpp  types.hpp
src/client/: client.cpp
src/common/: conn.hpp  resolver.hpp  stwp_msg.hpp  tls.cpp  tls.hpp  tls_info.hpp  url_parser.hpp
src/server/: server.cpp
tools/: make_certs.sh
www/: fetch.html  index.html  mixed_test.html  speed.html  style.css
